Merge AngusCtrl to AngusTester